--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 OCR_modes_tesseract.png
 PSM_modes_tesseract.png
 __pycache__
+Contrast-2.jpg
+original_image.jpg
+Brightness-1.jpg
+Contrast_and_Brightness-2.jpg
