--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./ml-demo  # Apply working dir to all steps
+        working-directory: ./frontend  # Apply working dir to all steps
 
     steps:
       - name: Checkout repo
@@ -24,7 +24,7 @@ jobs:
         with:
           node-version: 18
           cache: npm
-          cache-dependency-path: ./ml-demo/package-lock.json
+          cache-dependency-path: ./frontend/package-lock.json
 
       - name: Install dependencies
         run: npm ci
